// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Se llevará a cabo las pruebas del <SearchPage/> Debe de mostrar a batman y el input con valor de query 1`] = `
<div>
  <h1>
    Buscar Heroe
  </h1>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-5"
    >
      <h4>
        Search Form
      </h4>
      <hr />
      <form
        className="d-grid gap-2"
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="BuscarText"
          onChange={[Function]}
          placeholder="Buscar Heroe"
          type="text"
          value="batman"
        />
        <button
          className="btn m-1 btn-outline-primary"
          type="submit"
        >
          Buscar..
        </button>
      </form>
    </div>
    <div
      className="col-7"
    >
      <h4>
        Resultados
      </h4>
      <hr />
      <div
        className="card ms-3 mt-4"
        style={
          Object {
            "maxWidth": 540,
          }
        }
      >
        <div
          className="row g-0"
        >
          <div
            className="col-md-4"
          >
            <img
              alt="Batman"
              className="card-img"
              src="./assets/heroes/dc-batman.jpg"
            />
          </div>
          <div
            className="col-md-8"
          >
            <div
              className="card-body"
            >
              <h5
                className="card-title"
              >
                Batman
              </h5>
              <p
                className="card-text"
              >
                Bruce Wayne
              </p>
              <p
                className="card-text"
              >
                <small
                  className="text-muted"
                >
                   
                  Detective Comics #27
                   
                </small>
              </p>
              <a
                className="btn btn-primary"
                href="/heroe/dc-batman"
                onClick={[Function]}
              >
                Mas...
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Se llevará a cabo las pruebas del <SearchPage/> Debe de mostrarse de manera correcta con sus valores por default 1`] = `
<div>
  <h1>
    Buscar Heroe
  </h1>
  <hr />
  <div
    className="row"
  >
    <div
      className="col-5"
    >
      <h4>
        Search Form
      </h4>
      <hr />
      <form
        className="d-grid gap-2"
        onSubmit={[Function]}
      >
        <input
          autoComplete="off"
          className="form-control"
          name="BuscarText"
          onChange={[Function]}
          placeholder="Buscar Heroe"
          type="text"
          value=""
        />
        <button
          className="btn m-1 btn-outline-primary"
          type="submit"
        >
          Buscar..
        </button>
      </form>
    </div>
    <div
      className="col-7"
    >
      <h4>
        Resultados
      </h4>
      <hr />
      <div
        className="alert alert-info"
      >
        Busca un heroe por favor!!
      </div>
    </div>
  </div>
</div>
`;
